objects/PS_DSR_Document__c.object
<CustomObject>
    <description>Professional Services Deal Support Request Documents</description>
    <fields>
        <fullName>Date_Reviewed__c</fullName>
        <description>The date that the document was reviewed during the DSR process</description>
        <label>Date Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Support__c</fullName>
        <description>The parent Deal Support record to which these PS DSR documents are related</description>
        <label>Deal Support</label>
        <referenceTo>Deal_Support__c</referenceTo>
        <relationshipLabel>PS DSR Documents</relationshipLabel>
        <relationshipName>PS_DSR_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Statement of Work</fullName>
                </value>
                <value>
                    <fullName>Letter of Engagement</fullName>
                </value>
                <value>
                    <fullName>Project Request Template</fullName>
                </value>
                <value>
                    <fullName>SC Delivery Questionnaire</fullName>
                </value>
                <value>
                    <fullName>SC Design Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Custom Use Case Documentation</fullName>
                </value>
                <value>
                    <fullName>Architectural Document</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>The physical file name for the PS DSR Document / Attachment</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Upload_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date that the attachment was initially uploaded</description>
        <label>Initial Upload Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the document has been reviewed during the DSR process</description>
        <label>Is Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <label>PS DSR Document</label>
    <nameField>
        <label>PS DSR Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS DSR Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>